Split client and admin extension